Fixed the double scrollbars. See issue #14 https://github.com/Kevin-De-Coninck/OfficeUI.Beta/issues/17

--- a/Resources/Stylesheets/OfficeUI.less
+++ b/Resources/Stylesheets/OfficeUI.less
@@ -15,6 +15,7 @@
 /* -----------------------------------------------------------------------------------------------*/
 .noPadding { padding: 0; }
 .noMargin { margin: 0; }
+.no-overflow { overflow: hidden; }
 
 // Provides the main Office User Interface styling.
 #OfficeUI {
